--- a/css/custom.css
+++ b/css/custom.css
@@ -707,6 +707,42 @@ section.top-bar-section {
 		background: #61B329;
 	}
 
+.button-1 {
+	font-family: 'Droid Sans',"Helvetica Neue",Helvetica,Arial,sans-serif;
+	background-color: rgba(0,0,0,.3);
+	border-radius: 15px;
+	font-size: 1rem;
+	border-style: solid;
+	border-width: 0px;
+	cursor: pointer;
+	font-weight: normal;
+	line-height: normal;
+	margin: 0 0 1.25rem;
+	position: relative;
+	text-decoration: none;
+	text-align: center;
+	display: inline-block;
+	padding-top: 1rem;
+	padding-right: 2rem;
+	padding-bottom: 1.0625rem;
+	padding-left: 2rem;
+	font-size: 1rem;
+	border-color: #007095;
+	color: #fff;
+	-webkit-transition: background-color 300ms ease-out;
+	-moz-transition: background-color 300ms ease-out;
+	transition: background-color 300ms ease-out;
+	padding-top: 1.0625rem;
+	padding-bottom: 1rem;
+	-webkit-appearance: none;
+	border: none;
+	font-weight: normal !important;
+}
+
+	.button-1:hover, .button-1:focus {
+		background-color: rgba(0,0,0,.7);
+	}
+
 textarea {
 	min-height: 169px;
 }
