--- a/new_look/Video Background Version/HTML Files/css/main.css
+++ b/new_look/Video Background Version/HTML Files/css/main.css
@@ -149,6 +149,11 @@ ul li {
     margin-left: 20px;
 	color: rgba(95,117,137,1);
 }
+
+.half_column1 ul li {
+	color:white;
+}
+
 ul li a, ol li a {
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
@@ -168,10 +173,23 @@ blockquote:before {
     width: 6%;
     top: -6px;
 }
+
+blockquote:after {
+    color: rgba(255, 255, 255, 0.4);
+    content: "\201D";
+    display: inline-block;
+    font-family: georgia;
+    font-size: 114px;
+    position: relative;
+    vertical-align: top;
+    width: 6%;
+    top: -6px;
+}
+
 blockquote {
     border: 0 none;
     display: block;
-    margin: 3.5em 0 3.5em 0em;
+    margin: 3.5em 0 0 0;
     padding: 0;
 	text-align:left;
 }
@@ -182,8 +200,8 @@ blockquote p {
     font-style: normal;
     font-weight: 700;
     line-height: 1.4em;
-    margin: 0;
-    width: 90%;
+    margin: 0 0 0 15px;
+    width: 76%;
     color: #ffffff;
 }
 .testimonials blockquote:before {
@@ -273,6 +291,9 @@ background-color: rgba(255, 255, 255, 0.3);
     padding: 15px 0 20px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
+
+.right {float: right;}
+
 #background h1, #background h2, #background h3, #background h4 {
     color: #FFFFFF;
 }
@@ -358,6 +379,8 @@ h5 {
 }
 .greycontainer {
     background: none repeat scroll 0 0 #0875bd;
+    background: none repeat scroll 0 0 rgb(231,76,60);
+    background: none repeat scroll 0 0 rgba(231,76,60,0.9);
 	width: 100%;
 	padding: 80px 0;
 	overflow: auto;
@@ -459,6 +482,8 @@ h5 {
 	width: 100%;
 	text-align:center;
     background-color: #0875bd ;
+    background-color: rgb(231,76,60);
+    background-color: rgba(231,76,60,0.8);
 }
 .centered { text-align: center !important; }
 .knob { color: rgba(255,255,255,0.4) !important; }
@@ -551,6 +576,7 @@ h5 {
 #social-left [class^="icon-"]:hover:before, #social-left [class*=" icon-"]:hover:before {color: rgba(255, 255, 255, 1.0); }
 #social-button {
     background-color: #0B86C8;
+    background-color: rgb(231,76,60);
     border-radius: 0 0 3px 3px;
     float: none;
     left: 50%;
@@ -567,6 +593,8 @@ h5 {
 #social-button:hover:before { 
     border-top: 7px double #0B86C8;
     border-bottom: 2px solid #0B86C8;
+    /*border-top: 7px double rgb(231,76,60);
+    border-bottom: 2px solid rgb(231,76,60);*/
 }
 #social-button:before {
     border-bottom: 2px solid #FFFFFF;
@@ -647,7 +675,7 @@ h5 {
     float: left;
     margin-bottom: 5%;
     width: 31%;
-    margin-right: 3.5%;
+    margin-right: 3%;
     text-align: left;
 }
 .one_third_last {
@@ -943,10 +971,10 @@ Responsive Syling
 @media all and (max-width: 1024px)  {
     #socialsection { width: 90%; height: 40px; opacity: 0; left: 5%; bottom: -1px; position: fixed; z-index: 105; color: #ffffff; border-radius: 3px 3px 0 0; transition: all 0.3s ease-in-out;}
     .mobileSpace { visibility:visible; clear: both; height: 60px; }
-    .content { width: 80%; }
+    .content { width: 90%; }
     h1 {font-size: 65px; }
     .huge-title { top: 25%; }
-    .hero { width: 80%; }
+    .hero { width: 85%; }
     #background {
         background-image: url("../img/background.jpg");
         background-size: cover;
@@ -1007,7 +1035,7 @@ Responsive Syling
     .huge-title { width: 80%; top: 25%;}
     blockquote:before { width: 10%; }
     blockquote { padding: 0; }
-    blockquote p {width: 90%; text-align: left; font-size: 32px;}
+    blockquote p {width: 76%; text-align: left; font-size: 32px;}
     #mc_embed_signup input.email { width: 93%; }
     .clear { margin-top: 20px; }
     #mc_embed_signup { height: auto; }
@@ -1044,7 +1072,7 @@ Responsive Syling
     padding: 8px 0 8px 0;
     }
     .hero .one_third, .hero .one_third_last { width: 100%; }
-    blockquote p { font-size: 24px; width: 80%; }
+    blockquote p { font-size: 24px; width: 56%; }
     blockquote:before { width: 20%; top: -11px; }
     h1 {font-size: 40px; padding-bottom: 10px;}
     h4 {font-size: 18px; padding-bottom: 10px; }
