--- a/new_look/Video Background Version/HTML Files/css/main.css
+++ b/new_look/Video Background Version/HTML Files/css/main.css
@@ -20,7 +20,7 @@ body, html {
 	text-rendering: optimizeLegibility;
     background-position: center center;
 }
-footer { background-color: #262B30; padding: 20px 0 50px 0; }
+footer { background-color: #262B30; padding: 20px 0 50px 0; border-top: solid 2px rgba(255, 255, 255, 0.9);}
 footer p {
 	color: #ffffff;
 	font-family: 'Raleway', sans-serif;
@@ -33,7 +33,7 @@ header {
     width: 100%;
 	position: fixed;
 	top:0;
-	z-index:9999;
+	z-index:999;
 	font-family: 'Raleway', sans-serif;
 }
 .header-container {
@@ -185,6 +185,8 @@ blockquote:after {
     width: 6%;
     top: -6px;
 }
+
+.owl-item blockquote:after { content: none;}
 
 blockquote {
     border: 0 none;
@@ -376,6 +378,8 @@ h5 {
 	width: 100%;
 	padding: 80px 0;
 	overflow: auto;
+    border-top: solid 2px rgba(255, 255, 255, 0.9);
+    border-bottom: solid 2px rgba(255, 255, 255, 0.9);
 }
 .greycontainer {
     background: none repeat scroll 0 0 #0875bd;
@@ -405,6 +409,7 @@ h5 {
    background-size: cover;
     background-position: center center;
     background-attachment: fixed;
+    border-bottom: solid 2px rgba(255, 255, 255, 0.9);
 }
 .wrapper {
     background: none repeat scroll 0 0 transparent;
@@ -484,6 +489,7 @@ h5 {
     background-color: #0875bd ;
     background-color: rgb(231,76,60);
     background-color: rgba(231,76,60,0.8);
+    border-top: solid 2px rgba(255, 255, 255, 0.9);
 }
 .centered { text-align: center !important; }
 .knob { color: rgba(255,255,255,0.4) !important; }
@@ -991,7 +997,7 @@ Responsive Syling
         -moz-background-size: cover;
         background-size: cover;
         background-position: center center;
-        background-attachment: scroll;
+        background-attachment: fixed;
         width: 100%;
         height: 100%;
     }
