--- a/new_look/Video Background Version/HTML Files/css/main.css
+++ b/new_look/Video Background Version/HTML Files/css/main.css
@@ -799,6 +799,21 @@ Carousel Specific Styling
 .owl-theme .owl-controls {margin-top: 30px !important; text-align: left !important;}
 #Clients .owl-theme .owl-controls {margin-top: 30px !important; text-align: center !important;}
 .huge-title .owl-pagination {display:none !important;}
+.fancybox-title a {
+    color: #ffffff;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    transition: all 0.2s ease-in-out;
+    font-weight: 600;
+}
+
+.fancybox-title a:hover {
+    color: #ffffff;
+    text-decoration: none;
+    border-bottom: 1px solid #ffffff;
+    padding-bottom: 3px;
+}
+
 /*
 ==============================================
 Contact Form Styling
