--- a/new_look/Video Background Version/HTML Files/css/main.css
+++ b/new_look/Video Background Version/HTML Files/css/main.css
@@ -54,6 +54,27 @@ a img, a, img { border: none; outline: none; text-decoration: none;}
     min-height: 239px;
 }
 
+.flag {
+    position: absolute;
+    background-size: cover;
+    border: 2px solid rgba(255, 255, 255, 0.9);
+    border-radius: 10%;
+    height: 30px;
+    width: 40px;
+    right: 10px;
+    top: 10px;
+    z-index: 10000;
+    opacity: 0.8;
+}
+
+.es {
+    background-image: url('../img/es.svg');
+}
+
+.gb {
+    background-image: url('../img/gb.svg');
+}
+
 #toTop {
     display: none;
     position: fixed;
@@ -208,8 +229,8 @@ blockquote p {
     font-style: normal;
     font-weight: 700;
     line-height: 1.4em;
-    margin: 0 0 0 15px;
-    width: 76%;
+    margin: 0 15px 0 15px;
+    width: 77%;
     color: #ffffff;
 }
 .testimonials blockquote:before {
@@ -396,7 +417,7 @@ h5 {
 	overflow: auto;
 }
 .parallax1 { 
-    background-image: url("../img/background5.jpg");
+    background-image: url("../img/background5@2x.jpg");
     overflow: auto;
     padding: 80px 0;
     -webkit-background-size: cover;
@@ -407,7 +428,7 @@ h5 {
 }
 .parallax1 p, .parallax1 h2, .parallax2 p, .parallax2 h2 { color: #ffffff; }
 .parallax2 {
-    background-image: url("../img/background6.jpg");
+    background-image: url("../img/background6@2x.jpg");
     overflow: auto;
     padding: 80px 0;
     -webkit-background-size: cover;
@@ -725,7 +746,7 @@ h5 {
     text-transform: uppercase;
 }
 .eye { 
-    background-image: url("../img/magnify.gif");
+    /*background-image: url("../img/magnify.gif");*/
     background-position: center center;
     width: 99%;
     height: auto;
@@ -734,6 +755,9 @@ h5 {
     padding: 0;
     margin: 0;
 }
+
+.eye:hover{background-image: url("../img/magnify.gif");}
+
 #Portfolio .one_third_last, #Portfolio .one_third {margin-bottom: 0; margin-top: 5%; }
  .one_third_last img, .one_third img, .half_column1 img, .half_column2 img, .hero img { width: 100%; height: auto; }  
 .one_third_last h2, .one_third h2 { font-size: 32px; padding: 0 0 10px 0; opacity: 0.4;}
@@ -1003,7 +1027,7 @@ Responsive Syling
     .huge-title { top: 25%; }
     .hero { width: 85%; }
     #background {
-        background-image: url("../img/background.jpg");
+        background-image: url("../img/background@2x.jpg");
         background-size: cover;
         width: 100%;
         height: 100%;
@@ -1099,7 +1123,7 @@ Responsive Syling
     padding: 8px 0 8px 0;
     }
     .hero .one_third, .hero .one_third_last { width: 100%; }
-    blockquote p { font-size: 24px; width: 56%; }
+    blockquote p { font-size: 24px; width: 51%; }
     blockquote:before { width: 20%; top: -11px; }
     h1 {font-size: 40px; padding-bottom: 10px;}
     h4 {font-size: 18px; padding-bottom: 10px; }
@@ -1107,7 +1131,7 @@ Responsive Syling
     h3 {font-size: 27px; }
     h5 {font-size: 18px; }
     .header-container { width: 90%; padding: 0;}
-    .content { width: 80%; }
+    .content { width: 83%; }
     .huge-title { width: 80%; top: 30%;}
     #mc_embed_signup input.email { width: 88%; }
     .button-white [class^="icon-"]:before, .button-white [class*=" icon-"]:before { font-size: 18px; }
