--- a/new_look/Video Background Version/HTML Files/css/main.css
+++ b/new_look/Video Background Version/HTML Files/css/main.css
@@ -75,6 +75,8 @@ a img, a, img { border: none; outline: none; text-decoration: none;}
     background-image: url('../img/gb.svg');
 }
 
+.w100 {width: 100%;}
+
 #toTop {
     display: none;
     position: fixed;
@@ -417,7 +419,7 @@ h5 {
 	overflow: auto;
 }
 .parallax1 { 
-    background-image: url("../img/background5@2x.jpg");
+    background-image: url("../img/background5.jpg");
     overflow: auto;
     padding: 80px 0;
     -webkit-background-size: cover;
@@ -426,9 +428,10 @@ h5 {
     background-position: center center;
     background-attachment: fixed;
 }
+
 .parallax1 p, .parallax1 h2, .parallax2 p, .parallax2 h2 { color: #ffffff; }
 .parallax2 {
-    background-image: url("../img/background6@2x.jpg");
+    background-image: url("../img/background6.jpg");
     overflow: auto;
     padding: 80px 0;
     -webkit-background-size: cover;
@@ -438,6 +441,7 @@ h5 {
     background-attachment: fixed;
     border-bottom: solid 2px rgba(255, 255, 255, 0.9);
 }
+
 .wrapper {
     background: none repeat scroll 0 0 transparent;
 	width: 100%;
@@ -1029,7 +1033,7 @@ Responsive Syling
     .huge-title { top: 25%; }
     .hero { width: 85%; }
     #background {
-        background-image: url("../img/background@2x.jpg");
+        background-image: url("../img/background.jpg");
         background-size: cover;
         width: 100%;
         height: 100%;
@@ -1153,3 +1157,7 @@ Responsive Syling
     position: relative;
     }
 }
+
+@media all and (min-device-width : 320px) and (max-device-width : 568px){
+      .parallax1, .parallax2 {  background-attachment: scroll; background-position: scroll; height: 100%; width:100%; overflow: scroll; -webkit-overflow-scrolling: touch;}
+    }
