--- a/san-patricio-foundation-5.4.0/css/styles.css
+++ b/san-patricio-foundation-5.4.0/css/styles.css
@@ -4,8 +4,12 @@
 body {font-family: 'Lato', Arial, sans-serif; text-rendering: optimizeLegibility;}
 h1, h2, h3, h4, h5, h6 {font-family: 'Lato', Arial, sans-serif;}
 button, .button {font-family: 'Lato', Arial, sans-serif;}
-body {
+
+/*Header*/
+
+.header {
     background-color: #ffffff;
     background-image: url(../img/mnd0214.jpg);
     overflow: auto;
+    width: 100% !important;
 }
