--- a/minimalistic-experiment/css/styles.css
+++ b/minimalistic-experiment/css/styles.css
@@ -1,9 +1,39 @@
 /*Customizations and site styles*/
 /*Fonts and general styling*/
+
+/* <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'> */
+
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Raleway'), url(http://fonts.gstatic.com/s/raleway/v9/QAUlVt1jXOgQavlW5wEfxVKPGs1ZzpMvnHX-7fPOuAc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Raleway Bold'), local('Raleway-Bold'), url(http://fonts.gstatic.com/s/raleway/v9/JbtMzqLaYbbbCL9X6EvaIwsYbbCjybiHxArTLjt7FRU.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
 .row {max-width: 64rem;}
-body {font-family: Arial, "Helvetica", Helvetica, sans-serif; text-rendering: optimizeLegibility;}
-h1, h2, h3, h4, h5, h6 {font-family: Arial, "Helvetica", Helvetica, sans-serif;}
-button, .button {font-family: Arial, "Helvetica", Helvetica, sans-serif;}
+body {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 400; text-rendering: optimizeLegibility;}
+h1, h2, h3, h4, h5, h6 {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif; font-weight: 400;}
+button, .button {font-family: 'Raleway', Arial, "Helvetica", Helvetica, sans-serif;}
+
+h1              { font-size: 2.5rem; margin: .67rem 0; }
+h2              { font-size: 2rem; margin: .75rem 0; }
+h3              { font-size: 1.75rem; margin: .83rem 0; }
+h4              { font-size: 1.25rem; margin: .83rem 0; }
+h5              { font-size: 1rem; margin: 1.5rem 0; }
+h6              { font-size: .83rem; margin: 1.67rem 0; }
+h1, h2, h3, h4,
+h5, h6          { font-weight: bolder; }
+p 				{ font-size: 1.125rem;}
 
 /* Colors 
 
@@ -25,49 +55,93 @@ menu green separator rgb(0, 121, 52);
 .mtb16 {margin: 1rem 0 !important;}
 .mb16 {margin-bottom: 1rem !important;}
 
+.mtb64 {margin-top: 4rem 0 !important;}
+.mt64 {margin-top: 4rem !important;}
+
 
 /* Header and Menu */
-
-.header {
-    background-color: #ffffff;
-    background-image: url(../img/mnd0214.jpg);
-    overflow: auto;
-    width: 100% !important;
-}
 
 .header h1, .header h2, .header h3, .header h4, .header h5, .header h6, .header p {color:#ffffff;}
 
 .menu {
-	background-color: rgb(0, 146, 63);
-	background-color: rgba(0, 146, 63, 1);
-	/*min-height: 4rem;*/
-	width: 100% !important;
-	margin: 0 auto;
-	/*padding-top: 1rem;*/
+	background: rgba(255, 255, 255, 0.85);
 }
 
 .menu a {
-	color: #ffffff !important;
+	color: #000000 !important;
 	margin: 0 !important;
+	font-size: 1.5rem;
+}
+
+	.menu a:hover {
+		color: #807F83 !important;
+		opacity: 0.8;
+	}
+
+.menu .bh:hover {
+	background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
+.menu .bh1:hover {
+	border-bottom: 2px solid #CC6699;
+}
+
+#me {
+	border-left: 3px solid #CC6699;
+}
+
+.menu .bh2:hover {
+	border-bottom: 2px solid #33CCFF;
+}
+
+#skills {
+	border-left: 3px solid #33CCFF;
+}
+
+.menu .bh3:hover {
+	border-bottom: 2px solid #FFFF66;
+}
+
+#resume {
+	border-left: 3px solid #FFFF66;
+}
+
+.menu .bh4:hover {
+	border-bottom: 2px solid #99CC66;
+}
+
+#portfolio {
+	border-left: 3px solid #99CC66;
+}
+
+.menu .bh5:hover {
+	border-bottom: 2px solid #9999CC;
+}
+
+#ios {
+	border-left: 3px solid #9999CC;
+}
+
+.menu .bh6:hover {
+	border-bottom: 2px solid #FFAD6D;
+}
+
+#contact {
+	border-left: 3px solid #FFAD6D;
 }
 
 .lh-m {line-height: 4rem !important;}
 
-/*.menu a:hover {
-	color: #00461e !important;
-	color: #ffffff !important;
-}*/
-
 .top-bar a {color:#ffffff !important;}
 
 .contain-to-grid {
-	background: rgb(0, 146, 63);
-	background: rgba(0, 146, 63, 1);
+	/*background: rgb(0, 146, 63);
+	background: rgba(0, 146, 63, 1);*/
 }
 
 .top-bar {
-	background: rgb(0, 146, 63) !important;
-	background: rgba(0, 146, 63, 1) !important;
+	/*background: rgb(0, 146, 63) !important;
+	background: rgba(0, 146, 63, 1) !important;*/
 }
 
 .contain-to-grid .top-bar {
@@ -78,18 +152,18 @@ menu green separator rgb(0, 121, 52);
 .top-bar-section li:not(.has-form) a:not(.button) {
 	padding: 0 15px;
 	line-height: 45px;
-	background: rgb(0, 146, 63) !important;
-	background: rgba(0, 146, 63, 1) !important;
+	/*background: rgb(0, 146, 63) !important;
+	background: rgba(0, 146, 63, 1) !important;*/
 }
 
 .top-bar.expanded .title-area {
-	background: rgb(0, 146, 63) !important;
-	background: rgba(0, 146, 63, 1) !important;
+	/*background: rgb(0, 146, 63) !important;
+	background: rgba(0, 146, 63, 1) !important;*/
 }
 
 .tab-bar {
-	background: rgb(20,70,124) !important;
-	background: rgba(20,70,124,1) !important;
+	/*background: rgb(20,70,124) !important;
+	background: rgba(20,70,124,1) !important;*/
 }
 
 .left-small {
@@ -98,37 +172,37 @@ menu green separator rgb(0, 121, 52);
 }
 
 .left-off-canvas-menu {
-	background: rgb(20, 70, 124) !important;
-	background: rgba(20, 70, 124, 1) !important;	
+	/*background: rgb(20, 70, 124) !important;
+	background: rgba(20, 70, 124, 1) !important;*/	
 }
 
 ul.off-canvas-list li label {
-	background: rgba(16,58,102,1) !important;
+	/*background: rgba(16,58,102,1) !important;*/
 }
 
 ul.off-canvas-list li a {
-	border-bottom: 1px solid rgba(13,45,80,1);
+	/*border-bottom: 1px solid rgba(13,45,80,1);*/
 }
 
 ul.off-canvas-list li a:hover {
-	background: rgba(16,58,102,1) !important;
+	/*background: rgba(16,58,102,1) !important;*/
 }
 
 /* Footer */
 
 .footer {
 	width: 100% !important;
-	background: rgb(20,70,124) !important;
-	background: rgba(20,70,124,1) !important;
+	background: rgb(203,201,207) !important;
+	background: rgba(203,201,207,0.85) !important;
 	padding: 2.5rem 0 1.5rem;
 }
 
 .footer p, .footer h4 {
-	color: #ffffff !important;
+	color: #000000 !important;
 }
 
 .footer a {
-	color: #ffffff !important;
+	color: #000000 !important;
 }
 
 .footer a:hover {
@@ -138,8 +212,8 @@ ul.off-canvas-list li a:hover {
 /* Cusom Divs */
 
 .panel .blue {
-	background: rgb(20,70,124) !important;
-	background: rgba(20,70,124,1) !important;
+	background: rgb(203,201,207) !important;
+	background: rgba(203,201,207,0.85) !important;
 }
 
 .panel .blue h4 {
@@ -151,7 +225,7 @@ ul.off-canvas-list li a:hover {
 }
 
 .panel .blue h4, .panel .blue p {
-	color: #ffffff !important;
+	color: #000000 !important;
 }
 
 /* Button customization */
@@ -167,9 +241,8 @@ ul.off-canvas-list li a:hover {
 
 .button.transparent {
 	background-color: transparent !important;
-	min-height: 4.3rem !important;
 }
 
-.menu .bh:hover {
-	background-color: rgba(0, 95, 41, 1) !important;
+@media only screen and (max-width: 40.063em) { 
+	#me, #skills, #resume, #portfolio, #ios, #contact {margin-top: 1.5rem !important;}
 }
