--- a/responsive-bp/styles.css
+++ b/responsive-bp/styles.css
@@ -65,7 +65,7 @@ a:hover{color:#807F83;}
 ul {margin: 0 !important;}
 li {padding: 0.75rem 0; font-size:1.125rem;}
 
-#me, #skills, #resume, #portfolio, #ios, #contact {padding: 0 0.9375rem; }
+#me, #skills, #resume, #portfolio, #ios, #contact {padding: 0 0.9375rem; margin: 2rem auto !important;}
 
 .fixed {
 	position: fixed;
@@ -167,3 +167,7 @@ div.bh6.active {border-bottom: 2px solid #FFAD6D !important;}
 	p.simple {font-size: 4.5rem !important; line-height: 4rem !important;margin-top: 25%;}
 	nav {display:none;}
 }
+
+/* Cusom Divs */
+
+#main {visibility: hidden;}
