--- a/bp/styles.css
+++ b/bp/styles.css
@@ -168,10 +168,63 @@ div.bh6.active {border-bottom: 2px solid #FFAD6D !important;}
 	nav {display:none;}
 }
 
+/* Mobile menu */
+
+ul {
+    list-style-type:none;
+    overflow:hidden;
+    padding: 0;
+}
+
+ul li a {
+	text-decoration: none;
+}
+
+div.fixed.center.visible-xs {background: rgba(255, 255, 255, 0.85);}
+
 /* Cusom Divs */
 
-#main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; -moz-transition: 1.597s opacity;}
+.hide {visibility: hidden;}
 
+#main {visibility: hidden; opacity:0; transition:opacity 1.597s; -webkit-transition: 1.597s opacity; -moz-transition: 1.597s opacity;}
+#main {-webkit-transition: all 1.597s ease; -moz-transition: all 1.597s ease; -o-transition: all 1.597s ease; transition: all 1.597s ease;}
 #main.show {visibility: visible; opacity: 1;}
 
 #me h3, #skills h3, #resume h3, #portfolio h3, #ios h3, #contact h3 {color: #807F83;}
+
+.modal-overlay {
+	background: rgba(255,255,255,0.95);
+	background: url(img/trans10.png);
+	background-repeat: repeat;
+}
+
+.modal-lock>body, .modal-on {
+	/*filter: blur(10px);
+	-webkit-filter: blur(10px);
+	-moz-filter: blur(10px);
+	filter: url(img/blur.svg);*/
+
+}
+
+.modal-footer, .modal-header {
+	color: #000;
+}
+
+.modal-close {
+	color: #000;
+}
+
+.modal-direction {
+	color: #000;
+}
+
+/* Button customization */
+
+button:focus {outline:0;}
+
+.menuB{
+	font-size: 1.25rem !important;
+    margin: 0 auto;
+    color: #ffffff !important;
+	background-color: #000000 !important;
+}
